# amigahid-pico

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  container-shell.sh  swd-program.sh
.github/workflows/: ci-build.yml
buildenv/: Containerfile  README.md
doc/: errata.md  hardware.md  installation.md
kicad/: amigahid-pico-cache.lib  amigahid-pico.kicad_pcb  amigahid-pico.kicad_pcb-bak  amigahid-pico.kicad_prl  amigahid-pico.kicad_pro  amigahid-pico.kicad_sch  amigahid-pico.net  amigahid-pico.pro  amigahid-pico.sch  amigahid-pico.sch-bak  fp-info-cache  fp-lib-table
src/: CMakeLists.txt  bt_hid.c  bt_hid.h  btstack_config.h  config.h  input_bridge.c  input_bridge.h  input_bridge_bt.h  main.c  tusb_config.h  usb_hid.c  usb_hid.h
src/display/: CMakeLists.txt  README.md  disp_ssd.c  disp_ssd.h  font.h  font_6x13.h  ssd1306.c  ssd1306.h  ugui.c  ugui.h  ugui_config.h
src/hw/usb/: CMakeLists.txt
src/hw/usb/lufa-hid/: Architectures.h  CMakeLists.txt  Common.h  Events.h  HIDClassCommon.h  HIDParser.c  HIDParser.h  README.md  StdDescriptors.h  USBMode.h
src/platform/: CMakeLists.txt
src/platform/amiga/: CMakeLists.txt  keyboard.h  keyboard.pio  keyboard_serial_io.c  keyboard_serial_io.h  quad_mouse.c  quad_mouse.h
src/platform/common/: CMakeLists.txt  util.c  util.h
src/util/: CMakeLists.txt  debug_cons.c  debug_cons.h  output.c  output.h
